[tool.poetry]
name = "dialysis"
version = "0.1.0"
description = ""
authors = ["Kevin Wilson <khwilson@gmail.com>"]
packages = [
    { include = "dialysis", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
jupyter = "^1.0.0"
censusgeocode = "^0.5.2"
geopandas = "^0.11.1"
pyarrow = "^9.0.0"
matplotlib = "^3.6.0"
Rtree = "^1.0.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
nbqa = "^1.5.2"
isort = "^5.10.1"
black = "^22.8.0"
typing-extensions = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
